[metadata]

name = no-slip-paraview-filter
description = a paraview filter plugin to enforce a no slip boundary condition by directly setting the wall velocity to zero
author = Bray Moll

[options]
packages =
   noslip

install_requires =
    vtk >= 9.2
    numpy >= 1.21
    

python_requires = >=3.9

package_dir = 
    =src

zip_safe = no

[options.extras_require]

testing =
    pytest>= 6.0
    pytest-cov>=2.0
    mypy >= 0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
noslip = py.typed

[flake8]
max-line-length = 160