[metadata]

name = no-slip-paraview-filter
description = A filter for paraview to enforce a no-slip boundary condition at a surface
author = Bray Moll

[options]
packages =
   noslipfilter

install_requires =
    # vtk >= 9.1


python_requires = >=3.9

package_dir = 
    =src

zip_safe = no

[options.extras_require]

testing =
    pytest>= 6.0
    pytest-cov>=2.0
    mypy >= 0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
file_conversions = py.typed

[flake8]
max-line-length = 80